anoopsalesforce/src/objects/Shipping_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>GrandTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShippingDiscount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>ShippingDiscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWeight__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>TotalWeight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shipping_Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipping_Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping_Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>